--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -42,7 +42,7 @@
       {% for item in items %}
       <div class="cart-row">
         <div style="flex: 2">
-          <img class="row-image" src="{{item.product.imageURL}}" />
+          <img class="row-image" src="/{{item.product.imageURL}}" />
         </div>
         <div style="flex: 2"><p>{{item.product.name}}</p></div>
         <div style="flex: 1">
