--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -82,8 +82,16 @@
 
     <br />
     <div class="box-element hidden" id="payment-info">
-      <small>Paypal Options</small>
-      <button id="make-payment">Make payment</button>
+      <small>Payment Options</small>
+      <!--<button id="make-payment">Make payment</button>-->
+      <!-- chage here -->
+      <button id="make-payment" onclick="myFunction()">Make payment</button>
+      <script>
+      function myFunction() {
+        alert("Payment done return to home page");
+      }
+      </script>
+      <!-- chage here -->
     </div>
   </div>
 
