--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -85,7 +85,7 @@
       <small>Payment Options</small>
       <!--<button id="make-payment">Make payment</button>-->
       <!-- chage here -->
-      <button id="make-payment" onclick="myFunction()">Make payment</button>
+      <button id="make-payment" onclick="myFunction()"><a href="https://kart2home.herokuapp.com/">Make payment</a></button>
       <script>
       function myFunction() {
         alert("Payment done return to home page");
