--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -252,7 +252,7 @@
           <p class="text-muted mb-0 py-2">
             &copy; 2022-2024, kart2Home, Inc. or its affiliates
           </p>
-          <p class="text-muted mb-0 py-2">&lt/&gt Jaimin & Kunj</p>
+		<p class="text-muted mb-0 py-2">&lt/&gt <a href="https://www.linkedin.com/in/jayyymin18/">Jaimin Shah</a> & <a href="https://www.linkedin.com/in/ikunjshah/">Kunj Shah</a></p>
         </div>
       </div>
     </footer>
