--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -85,12 +85,15 @@
       <small>Payment Options</small>
       <!--<button id="make-payment">Make payment</button>-->
       <!-- chage here -->
-      <button id="make-payment" onclick="myFunction()"><a href="https://kart2home.herokuapp.com/">Make payment</a></button>
+      
+      <br>
+      <button id="make-payment" onclick="myFunction()">Make payment</button>
       <script>
       function myFunction() {
         alert("Payment done return to home page");
         cart = {};
         document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/";
+        window.location.href = "{% url 'store' %}";
       }
       </script>
       <!-- chage here -->
