--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -87,7 +87,7 @@
       <!-- chage here -->
       
       <br>
-      <button id="make-payment" onclick="myFunction()">Make payment</button>
+      <button id="make-payment" class="btn btn-success" onclick="myFunction()">Make payment</button>
       <script>
       function myFunction() {
         alert("Payment done return to home page");
