--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -77,7 +77,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'store' %}">kart2Home</a>
-      <button
+      <!--<button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
@@ -89,7 +89,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
         <ul class="navbar-nav mr-auto">
           <!--<li class="nav-item active">
             <a class="nav-link" href="{% url 'store' %}"
