--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -3,6 +3,10 @@
 <html>
   <head>
     <title>kart2Home</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 
     <meta
       name="viewport"
@@ -202,7 +206,7 @@
             </p>
             <ul class="list-inline mt-4">
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="instagram"
+                <a href="#" target="_blank" title="Twitter"
                   ><i
                     class="fa fa-twitter"
                     style="font-size: 36px; color: white"
@@ -210,7 +214,7 @@
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="instagram"
+                <a href="#" target="_blank" title="Facebook"
                   ><i
                     class="fa fa-facebook"
                     style="font-size: 36px; color: white"
@@ -226,7 +230,7 @@
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="instagram"
+                <a href="#" target="_blank" title="YouTube"
                   ><i
                     class="fa fa-youtube"
                     style="font-size: 36px; color: white"
@@ -234,7 +238,7 @@
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="instagram"
+                <a href="#" target="_blank" title="Google"
                   ><i
                     class="fa fa-google"
                     style="font-size: 36px; color: white"
